fix: user guard routes admin & fix flash message scrollbar x

--- a/src/style.css
+++ b/src/style.css
@@ -6,3 +6,6 @@
 * {
     font: 1em "Raleway", Arial, sans-serif;
 }
+body {
+    overflow-x: hidden;
+}
